Fixed spacing on left column

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body {
   font-family: "Kumbh Sans", sans-serif;
   font-weight: 400;
+  background-color: rgb(236, 236, 236);
 }
 
 .dogopolis {
@@ -64,14 +65,29 @@ img {
 
 .left {
   width: 400px;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+}
+
+h1 {
+  margin-bottom: 20px;
+  font-size: 3em;
+  height: 100px;
+}
+
+p {
+  font-size: 1.2em;
+  height: 200px;
 }
 
 .cta {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(228, 106, 187);
+  background-color: rgb(211, 44, 158);
   color: white;
+  font-size: 1em;
   font-weight: 400;
   width: 50%;
   height: 50px;
